--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": ["es2015", "react", "stage-0"],
-  "plugins": [["transform-object-assign"]],
+  "plugins": ["transform-object-assign", "universal-import"],
   "env": {
     "development": {
       "plugins": [
