--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "build": "cross-env NODE_ENV=production webpack --config ./webpack.production.config.js --progress",
     "test": "eslint app"
   },
+  "_moduleAliases": {
+    "webpack": "./node_modules/webpack-universal"
+  },
   "dependencies": {
     "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
@@ -45,17 +48,19 @@
     "react-helmet": "^5.1.3",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
+    "react-universal-component": "^2.3.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "webpack": "^3.4.1",
     "webpack-dev-middleware": "^1.11.0",
-    "webpack-hot-middleware": "^2.18.2"
+    "webpack-hot-middleware": "^2.18.2",
+    "webpack-universal": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-plugin-universal-import": "^1.2.5",
     "eslint": "^4.3.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
